<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/identify_user_button"
        style="@style/ButtonStyle"
        android:layout_marginTop="50dp"
        android:text="@string/identify_user"/>

    <Button
        android:id="@+id/alias_user_button"
        style="@style/ButtonStyle"
        android:layout_below="@id/identify_user_button"
        android:text="@string/alias_user"/>

    <Button
        android:id="@+id/track_event_button"
        style="@style/ButtonStyle"
        android:layout_below="@id/alias_user_button"
        android:text="@string/track_event"/>

    <Button
        android:id="@+id/register_button"
        style="@style/ButtonStyle"
        android:layout_below="@id/track_event_button"
        android:text="@string/register"/>

    <Button
        android:id="@+id/send_ipm_button"
        style="@style/ButtonStyle"
        android:layout_below="@id/register_button"
        android:text="@string/send_ipm"/>

    <Button
        android:id="@+id/disable_button"
        style="@style/ButtonStyle"
        android:layout_below="@id/send_ipm_button"
        android:text="@string/disable"/>

    <Button
        android:id="@+id/logout_button"
        style="@style/ButtonStyle"
        android:layout_below="@id/disable_button"
        android:text="@string/logout"/>

</RelativeLayout>
